--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,13 @@ body{
 
 #active{
 	color: black;
-	background-color: rgba(139,0,139,.5);
+	background-color: grey;
 	border: black;
 }
 #jumbo{
 	
 	color: black;
-	background-color: rgba(139,0,139,.5);
+	background-color: silver;
 	border: black;
 }
 
